Add git ignore for dotfiles (not finished)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,3 +4,6 @@ set-option -g default-shell "/usr/bin/fish"
 # Powerline
 source /usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
 
+
+# mouse integration
+set-option -g mouse on
