Finish gitignore setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,52 @@
+/.atom/
+/.bash_history
 /.config/
+/.cargo/
 /.cache/
+/.dbus/
+/.designer/
 /.dropbox-dist/
 /.dropbox/
 /.electron/
-/.gimp*/
+/.esd_auth
 /.gem/
+/.gimp*/
+/.gitkraken/
+/.gitconfig
 /.gnome/
+/.gnupg/
+/.ICEauthority
+/.ipython/
 /.java/
 /.jupyter/
+/.local/
+/.lesshst/
 /.lldb/
 /.mono/
 /.mozilla/
 /.multirust
+/.mume/
 /.node-gyp/
 /.node_repl_history
 /.npm/
+/.octave_hist
 /.quokka/
+/.pki/
 /.profile
+/.PyCharm*/
+/.python_history
+/.rustup/
 /.ssh/
 /.task/
+/.taskrc
 /.thumbnails/
 /.tox/
 /.vim/
 /.viminfo
 /.virtualenvs
 /.vscode/
+/.yarnrc
+/.yo-rc-global.json
 /calibre-library/
 /Desktop/
 /Downloads/
@@ -33,3 +55,5 @@
 /go/
 /projects/
 /Pictures/
+/Templates/
+/Videos/
