Increase the number of entries remembered in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,6 @@ source /usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
 
 # mouse integration
 set-option -g mouse on
+
+# Increase history entry count
+set -g history-limit 100000
