Add vim-like key schemes for pane selection and resizing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,3 +10,16 @@ set-option -g mouse on
 
 # Increase history entry count
 set -g history-limit 100000
+
+# Allow vim-like key scheme for pane selection
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+
+# Allow vim-like key scheme for pane resizing
+bind -r C-h resize-pane -L
+bind -r C-j resize-pane -D
+bind -r C-k resize-pane -U
+bind -r C-l resize-pane -R
+
