--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@
 /.config/
 /.cargo/
 /.cache/
+/.dbeaver-drivers/
+/.dbeaver4/
 /.dbus/
 /.designer/
 /.dropbox-dist/
 /.dropbox/
+/.eclipse/
 /.electron/
 /.esd_auth
 /.gem/
@@ -20,7 +23,7 @@
 /.java/
 /.jupyter/
 /.local/
-/.lesshst/
+/.lesshst
 /.lldb/
 /.mono/
 /.mozilla/
@@ -35,16 +38,20 @@
 /.profile
 /.PyCharm*/
 /.python_history
+/.pylint.d/	
 /.rustup/
 /.ssh/
 /.task/
 /.taskrc
 /.thumbnails/
+/.tmux_history
 /.tox/
 /.vim/
 /.viminfo
 /.virtualenvs
 /.vscode/
+/.VSCodeVim/
+/.wweconfig.json
 /.yarnrc
 /.yo-rc-global.json
 /calibre-library/
