tmux: load powerline only if it exists

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,12 @@
+# Reload tmux configuration 
+bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
+
 # Set fish as default shell
 set-option -g default-shell "/usr/bin/fish"
 
 # Powerline
-source /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf
-
+if-shell -b '[ -f /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf ]' \
+    'source /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # mouse integration
 set-option -g mouse on
@@ -22,4 +25,11 @@ bind -r C-h resize-pane -L
 bind -r C-j resize-pane -D
 bind -r C-k resize-pane -U
 bind -r C-l resize-pane -R
+
+# new window and retain cwd
+bind c new-window -c "#{pane_current_path}"
+
+# Start index of window/pane with 1, because we're humans, not computers
+set -g base-index 1
+setw -g pane-base-index 1
 
