--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -8,18 +8,36 @@
     "text",
   ],
   "cSpell.userWords": [
+    "Ander",
+    "Cotswolds",
+    "Ibai",
+    "Javi",
+    "Karolina",
+    "Kasia",
+    "Keepass",
+    "Primazo",
+    "Terraform",
+    "Wayland",
+    "Zopa",
+    "aita",
     "algo",
+    "cookiecutter",
+    "datastore",
+    "dtgoitia",
     "ebitda",
-    "mismeasurement"
+    "kubectl",
+    "kubernetes",
+    "mismeasurement",
+    "pipenv",
+    "pytest",
+    "resizeable",
+    "xmonad"
   ],
   "editor.lineNumbers": "off",
   "editor.minimap.enabled": false,
   "editor.renderWhitespace": "all",
-  "editor.rulers": [
-    79,
-    119
-  ],
-  "editor.snippetSuggestions": "top",
+  "editor.rulers": [ 79, 119 ],
+  // "editor.snippetSuggeVstions": "top",
   "editor.tabSize": 2,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
@@ -28,22 +46,32 @@
     "**/.git": false
   },
   "extensions.autoUpdate": false,
+  "gitlens.advanced.telemetry.enabled": false,
+  "gitlens.codeLens.enabled": false,
   "javascript.referencesCodeLens.enabled": true,
   "markdown-preview-enhanced.enableExtendedTableSyntax": true,
   "markdown-preview-enhanced.liveUpdate": true,
   "markdown.extension.italic.indicator": "_",
-  "materialTheme.fixIconsRunning": false,
+  "search.showLineNumbers": true,
+  "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
   "terminal.integrated.rendererType": "dom",
+  "terraform.telemetry.enabled": false,
   "typescript.implementationsCodeLens.enabled": true,
   "typescript.referencesCodeLens.enabled": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
-  "typescript.useCodeSnippetsOnMethodSuggest": true,
-  "vim.disableExtension": false,
+  "vim.disableExtension": true,
+  "vim.insertModeKeyBindings": [
+    {
+      "before": ["j", "j"],
+      "after": ["<Esc>"]
+    },
+  ],
   "window.menuBarVisibility": "toggle",
-  "window.zoomLevel": 0,
-"workbench.colorTheme": "Material Theme Palenight High Contrast",
-  "workbench.iconTheme": "eq-material-theme-icons-palenight",
+  "window.zoomLevel": 1,
+  "workbench.activityBar.visible": false,
+  "workbench.colorTheme": "One Dark Pro Bold",
+  "workbench.iconTheme": "eq-material-theme-icons-darker",
   "workbench.startupEditor": "newUntitledFile",
   "xmlLang.javaHome": ""
 }
