--- a/.gitconfig
+++ b/.gitconfig
@@ -1,21 +1,23 @@
 [user]
-	email = david.torralba.goitia@gmail.com
-	name = David Torralba Goitia
+  email = david.torralba.goitia@gmail.com
+  name = David Torralba Goitia
+
 [code]
-	editor = vim
+  editor = vim
+
 [diff]
-	tool = meld
+  tool = meld
 
 [core]
-	editor = vim
+  editor = vim
 
 [alias]
-	ch = checkout
-	br = branch
-	co = commit
-	st = status
-	ps = push
-	pl = push
-	unstage = reset HEAD --
-	dtgoitia = "!f() { reponame=$1; git clone git@github.com:dtgoitia/${reponame}.git; }; f"
-
+  ch = checkout
+  br = branch
+  co = commit
+  st = status
+  ps = push
+  pl = push
+  lg = log --oneline --all --graph --decorate
+  unstage = reset HEAD --
+  dtgoitia = "!f() { reponame=$1; git clone git@github.com:dtgoitia/${reponame}.git; }; f"
