VCSH: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,80 @@
-/.audacity-data/
+/.android/
+/.angular-config.json
 /.atom/
+/.audacity-data/
+/.babel.json
 /.bash_history
-/.config/
-/.cargo/
+/.boto
 /.cache/
+/.cargo/
+/.cmake
+/.config/
 /.dbeaver-drivers/
 /.dbeaver4/
 /.dbus/
+/.deno/
 /.designer/
+/.docker/
 /.dropbox-dist/
 /.dropbox/
 /.eclipse/
+/.electron-gyp/
 /.electron/
 /.esd_auth
+/.fontconfig/
 /.gem/
+/.ghc/
 /.gimp*/
 /.gitkraken/
+/.glide/
 /.gnome/
 /.gnupg/
+/.helm/
+/.history
 /.ICEauthority
 /.ipython/
 /.java/
 /.jupyter/
-/.local/
+/.kube/
 /.lesshst
 /.lldb/
+/.local/
+/.minikube/
 /.mono/
 /.mozilla/
 /.multirust
 /.mume/
-/.node-gyp/
 /.node_repl_history
+/.node-gyp/
 /.npm/
+/.npmrc
 /.octave_hist
-/.quokka/
+/.openshot_qt/
+/.p7zip
 /.pki/
 /.profile
+/.psql_history
 /.PyCharm*/
+/.pylint.d/
 /.python_history
-/.pylint.d/	
+/.quokka/
 /.rustup/
+/.sqlite_history
 /.ssh/
 /.task/
 /.taskrc
+/.terraform.d/
 /.thumbnails/
 /.tmux_history
 /.tox/
 /.vim/
 /.viminfo
 /.virtualenvs
+/.vscode-insiders/
+/.vscode-oss/
 /.vscode/
 /.VSCodeVim/
+/.vuerc
 /.wweconfig.json
 /.yarnrc
 /.yo-rc-global.json
@@ -60,8 +84,8 @@
 /Dropbox/
 /ebooks/
 /go/
-/projects/
 /Pictures/
+/projects/
 /Screenshot*
 /Templates/
 /Videos/
