tmux: maintain directory on window split

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,8 +26,14 @@ bind -r C-j resize-pane -D
 bind -r C-k resize-pane -U
 bind -r C-l resize-pane -R
 
-# new window and retain cwd
+# retain cwd when new window
 bind c new-window -c "#{pane_current_path}"
+
+# retain cwd when split window
+unbind %
+bind % split-window -h -c "#{pane_current_path}"
+unbind '"'
+bind '"' split-window -v -c "#{pane_current_path}"
 
 # Start index of window/pane with 1, because we're humans, not computers
 set -g base-index 1
