tmux: use fishshell as default shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,11 @@
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # Set fish as default shell
-set-option -g default-shell "/usr/bin/fish"
+set-option -g default-shell "which fish bash -i"
 
 # Powerline
-if-shell -b '[ -f /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf ]' \
-    'source /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
+#  if-shell -b '[ -f /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf ]' \
+#    'source /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # mouse integration
 set-option -g mouse on
@@ -38,4 +38,3 @@ bind '"' split-window -v -c "#{pane_current_path}"
 # Start index of window/pane with 1, because we're humans, not computers
 set -g base-index 1
 setw -g pane-base-index 1
-
