tmux: dynamically pass the fish shell path to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # Reload tmux configuration 
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
-# Set fish as default shell
-set-option -g default-shell "which fish bash -i"
+# Set fish as the default shell (dynamically)
+set-option -g default-shell $TMUX_SHELL
 
 # Powerline
 #  if-shell -b '[ -f /usr/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf ]' \
