--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,3 +38,23 @@ bind '"' split-window -v -c "#{pane_current_path}"
 # Start index of window/pane with 1, because we're humans, not computers
 set -g base-index 1
 setw -g pane-base-index 1
+
+# set vi mode for copy mode
+setw -g mode-keys vi
+
+# 'v' to start selection, and 'y' to copy and cancel
+unbind-key -T copy-mode-vi Space
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+unbind-key -T copy-mode-vi Enter
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key p paste-buffer
+
+# Use a 356 colour terminal
+set -g default-terminal "screen-256color"
+
+# tmux plugins
+# To install plugins: C-b C-I   uppercase I !!
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
