tmux: restore tmux environments automatically

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,9 +52,16 @@ bind-key p paste-buffer
 # Use a 356 colour terminal
 set -g default-terminal "screen-256color"
 
+# Save environment automatically every 5 mins
+set -g @continuum-save-interval '5'
+
+# Automatically restore the space on start
+# set -g @continuum-restore 'on'
+
 # tmux plugins
 # To install plugins: C-b C-I   uppercase I !!
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
