VSC: always show tabs
With the latest release only one tab was shown on the tab bar, which was
very confusing to navigate accross multiple files.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -53,6 +53,7 @@
 
   "workbench.activityBar.visible": false,
   "workbench.colorTheme": "One Dark Pro Bold",
+  "workbench.editor.showTabs": true,
   "workbench.iconTheme": "eq-material-theme-icons-palenight",
   "workbench.settings.editor": "json",
   "workbench.startupEditor": "newUntitledFile",
