--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -172,6 +172,7 @@
     "Primazo",
     "React's",
     "Scrapy",
+    "Shiyu",
     "Teja",
     "Terraform",
     "Torralba",
@@ -213,6 +214,7 @@
     "supernode",
     "supernodes",
     "tmux",
+    "unreusable",
     "xmonad"
   ],
 
