VSC: get daily updates for Python extension

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -104,6 +104,7 @@
     "editor.insertSpaces": true,
     "editor.tabSize": 4,
   },
+  "python.insidersChannel": "daily",
   "python.terminal.activateEnvironment": false,
 
   "[shellscript]": {
