VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -147,6 +147,7 @@
     "Cotswolds",
     "Dragu",
     "Emre",
+    "Eyeo",
     "Flowbase",
     "GDPR",
     "Goitia",
@@ -201,6 +202,7 @@
     "miniflow",
     "miniflows",
     "mismeasurement",
+    "multitenancy",
     "parallelization",
     "performant",
     "pipenv",
