VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -200,6 +200,8 @@
     "kubernetes",
     "macronutrient",
     "macronutrients",
+    "microservice",
+    "microservices",
     "miniflow",
     "miniflows",
     "mismeasurement",
