VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -144,6 +144,7 @@
 
   "cSpell.userWords": [
     "Ander",
+    "Argyrios",
     "Atlassian",
     "Barasti",
     "CQRS",
@@ -155,13 +156,16 @@
     "Flowbase",
     "GDPR",
     "Goitia",
+    "Gounaris",
     "Grafana",
     "HMRC",
+    "Hajyra",
     "Handley",
     "Hargrove",
     "Hindson",
     "Hsieh",
     "Ibai",
+    "Ilyas",
     "Inderjeet",
     "Iturricha",
     "Javi",
