VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -150,10 +150,12 @@
     "COVID",
     "CQRS",
     "Checkbase",
+    "Colbourne",
     "Cotswolds",
     "Dragu",
     "Emre",
     "Eyeo",
+    "Farisha",
     "Flowbase",
     "GDPR",
     "Goitia",
@@ -196,6 +198,7 @@
     "Zuha",
     "aita",
     "algo",
+    "autoanálisis",
     "autogestión",
     "cookiecutter",
     "datastore",
@@ -224,12 +227,17 @@
     "repos",
     "resizeable",
     "restructuration",
+    "románticamente",
+    "sapiosexual",
     "shipcat",
     "solutionize",
     "supernode",
     "supernodes",
     "tmux",
     "unreusable",
+    "venv",
+    "virtualenv",
+    "voyeurismo",
     "xmonad"
   ],
 
