VSC: set Pylance as the Python language server

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -107,7 +107,9 @@
     "editor.tabSize": 4,
   },
   "python.formatting.blackPath": "black",
+  "python.formatting.provider": "black",
   "python.insidersChannel": "daily",
+  "python.languageServer": "Pylance",
   "python.terminal.activateEnvironment": false,
 
   "[shellscript]": {
@@ -286,5 +288,4 @@
       "after": [ "<Esc>" ],
     }
   ],
-  "python.formatting.provider": "black",
 }
