VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -207,6 +207,8 @@
     "datastore",
     "dtgoitia",
     "ebitda",
+    "eneatipo",
+    "eneatipos",
     "hardcoded",
     "jira",
     "kanban",
@@ -221,6 +223,7 @@
     "mismeasurement",
     "multitenancy",
     "parallelization",
+    "perfeccionista",
     "performant",
     "pipenv",
     "poliamorosa",
