VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -216,6 +216,8 @@
     "macronutrients",
     "microservice",
     "microservices",
+    "microsevice",
+    "microsevices",
     "miniflow",
     "miniflows",
     "mismeasurement",
