VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -156,6 +156,7 @@
     "Barasti",
     "COVID",
     "CQRS",
+    "Ceballos",
     "Checkbase",
     "Colbourne",
     "Cotswolds",
@@ -184,6 +185,8 @@
     "Kasia",
     "Keepass",
     "Keren",
+    "Kowalczuk",
+    "Leszek",
     "Maciulis",
     "Matei",
     "Mbps",
@@ -192,10 +195,12 @@
     "Postgres",
     "Primazo",
     "React's",
+    "SCSRE",
     "Scrapy",
     "Shiyu",
     "Teja",
     "Terraform",
+    "Tido",
     "Torralba",
     "UWSGI",
     "VLAN",
@@ -236,6 +241,7 @@
     "poliamorosa",
     "poliamoroso",
     "polinormatividad",
+    "preprod",
     "pytest",
     "repos",
     "resizeable",
