VSC: use Go language server

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -76,6 +76,8 @@
   //
   // ============================================================================
 
+  "go.useLanguageServer": true,
+
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features"
   },
