--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -268,6 +268,7 @@
   "gitlens.advanced.telemetry.enabled": false,
   "gitlens.codeLens.enabled": false,
   "gitlens.hovers.annotations.enabled": true,
+  "gitlens.views.branches.branches.layout": "list",
   "gitlens.views.compare.files.layout": "tree",
   "gitlens.views.search.files.layout": "list",
 
