VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -152,12 +152,14 @@
   ],
 
   "cSpell.userWords": [
+    "Abiteboul",
     "Ander",
     "Argyrios",
     "Atlassian",
     "Barasti",
     "COVID",
     "CQRS",
+    "Carmo",
     "Ceballos",
     "Checkbase",
     "Colbourne",
@@ -165,7 +167,9 @@
     "Dragu",
     "Emre",
     "Eyeo",
+    "FHIR",
     "Farisha",
+    "Ferreira",
     "Flowbase",
     "GDPR",
     "Goitia",
@@ -190,6 +194,7 @@
     "Kowalczuk",
     "Leszek",
     "Maciulis",
+    "Manon",
     "Matei",
     "Mbps",
     "Peakon",
@@ -200,6 +205,7 @@
     "SCSRE",
     "Scrapy",
     "Shiyu",
+    "Soraia",
     "Teja",
     "Terraform",
     "Tido",
