VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -155,6 +155,7 @@
     "Abiteboul",
     "Ander",
     "Argyrios",
+    "Arulselvan",
     "Atlassian",
     "Barasti",
     "COVID",
@@ -166,6 +167,7 @@
     "Cotswolds",
     "Dragu",
     "Emre",
+    "Eyal",
     "Eyeo",
     "FHIR",
     "Farisha",
@@ -189,6 +191,7 @@
     "Karolina",
     "Kartoglu",
     "Kasia",
+    "Kazin",
     "Keepass",
     "Keren",
     "Kowalczuk",
@@ -203,8 +206,10 @@
     "Primazo",
     "React's",
     "SCSRE",
+    "Saurabh",
     "Scrapy",
     "Shiyu",
+    "Shrin",
     "Soraia",
     "Teja",
     "Terraform",
@@ -216,12 +221,14 @@
     "Wayland",
     "Zopa",
     "Zuha",
+    "Zwiessele",
     "aita",
     "algo",
     "autoanálisis",
     "autogestión",
     "cookiecutter",
     "datastore",
+    "deduplication",
     "dtgoitia",
     "ebitda",
     "eneatipo",
@@ -232,6 +239,7 @@
     "kanban",
     "kubectl",
     "kubernetes",
+    "lockdown",
     "macronutrient",
     "macronutrients",
     "microservice",
@@ -242,6 +250,7 @@
     "miniflows",
     "mismeasurement",
     "multitenancy",
+    "overtriage",
     "parallelization",
     "perfeccionista",
     "performant",
@@ -261,6 +270,8 @@
     "supernode",
     "supernodes",
     "tmux",
+    "triaging",
+    "undertriage",
     "unreusable",
     "venv",
     "virtualenv",
