VSC: sort imports on save

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -112,6 +112,9 @@
     "editor.formatOnSave": true,
     "editor.insertSpaces": true,
     "editor.tabSize": 4,
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true,
+    },
   },
   "python.formatting.blackPath": "black",
   "python.formatting.provider": "black",
