VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -253,6 +253,7 @@
     "miniflow",
     "miniflows",
     "mismeasurement",
+    "monkeypatching",
     "multitenancy",
     "overtriage",
     "parallelization",
