--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -323,7 +323,7 @@
   ],
   "todo-tree.tree.showScanModeButton": false,
 
-  "vim.disableExtension": true,
+  "vim.disableExtension": false,
   "vim.insertModeKeyBindings": [
     {
       "before": [ "j", "j" ],
