VSC: keep folded if the cursor moves over fold

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -324,6 +324,7 @@
   "todo-tree.tree.showScanModeButton": false,
 
   "vim.disableExtension": false,
+  "vim.foldfix": true,
   "vim.insertModeKeyBindings": [
     {
       "before": [ "j", "j" ],
