VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -155,6 +155,7 @@
   ],
 
   "cSpell.userWords": [
+    "APAC",
     "Abiteboul",
     "Ander",
     "Argyrios",
@@ -185,6 +186,7 @@
     "Hajyra",
     "Handley",
     "Hargrove",
+    "Healthcheck",
     "Hindson",
     "Hsieh",
     "Ibai",
@@ -255,6 +257,8 @@
     "mismeasurement",
     "monkeypatching",
     "multitenancy",
+    "neighbour",
+    "neighbours",
     "overtriage",
     "parallelization",
     "perfeccionista",
