VSC: show commit details at the bottom

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -288,6 +288,8 @@
     "xmonad"
   ],
 
+  "git-graph.commitDetailsView.location": "Docked to Bottom",
+
   "gitlens.advanced.messages": {
     "suppressGitDisabledWarning": true
   },
