VSC: silence extension recommendations notifications

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -22,7 +22,7 @@
   "explorer.openEditors.visible": 0,
 
   "extensions.autoUpdate": false,
-  "extensions.ignoreRecommendations": false,
+  "extensions.ignoreRecommendations": true,  // silence extension recommendation notifications
 
   "files.exclude": {
     "**/.DS_Store": true,
