VSC: update user dictionary

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -157,6 +157,8 @@
   "cSpell.userWords": [
     "APAC",
     "Abiteboul",
+    "Alasdair",
+    "Allain",
     "Ander",
     "Argyrios",
     "Arulselvan",
@@ -164,12 +166,15 @@
     "Barasti",
     "COVID",
     "CQRS",
+    "CSRF",
     "Carmo",
     "Ceballos",
     "Checkbase",
     "Colbourne",
     "Conor",
     "Cotswolds",
+    "DSAP",
+    "Dalgarno",
     "Dragu",
     "Emre",
     "Eyal",
@@ -182,6 +187,7 @@
     "Goitia",
     "Gounaris",
     "Grafana",
+    "Guillaume",
     "HMRC",
     "Hajyra",
     "Handley",
@@ -212,6 +218,8 @@
     "Primazo",
     "React's",
     "SCSRE",
+    "SSDLC",
+    "Santin",
     "Saurabh",
     "Scrapy",
     "Shiyu",
@@ -230,6 +238,7 @@
     "Zwiessele",
     "aita",
     "algo",
+    "anynomisation",
     "autoanálisis",
     "autogestión",
     "cookiecutter",
